--- a/index.Rmd
+++ b/index.Rmd
@@ -236,7 +236,7 @@ ggplot(plot4, aes(x = long, y = lat, group = group
   coord_fixed(ratio = 1.3) +
   labs(fill = "Wins per Team Location") +
   theme(legend.position="bottom") + 
-  scale_fill_distiller(palette = "Accent")
+  scale_fill_distiller(palette = "YlOrRd")
 
 Teamstats2 <- Teamstats2 %>%
   select(-State) %>%
