--- a/index.Rmd
+++ b/index.Rmd
@@ -31,191 +31,12 @@ Passing plays have become more common as teams can gain more yards compared to r
 
 In the 2018-2019 NFL season, The New England Patriots went on to win the Super Bowl, which is the highest accolade in pro football. The app below compares the passing statistics of each team to the New England Patriots, which may help us determine if passing statistics in the NFL has a major impact on a team's performance in a season. The app allows the user to compare the number of wins, losses, ties, average yards per completion, completion percentage, and total passing yards, per team, to the Patriots. Take a look!
 
-```{r, echo=FALSE, include=FALSE}
-library(shiny)
-library(ggplot2)
-library(tidyverse)
-library(png)
-library(grid)
-library(maps)
-library(leaflet)
-```
-
-
-```{r, echo=FALSE, message = FALSE, warning=FALSE}
-
-#plays <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/plays.csv")
-
-
-plot3 <- read.csv("Teamstats.csv")
-plot4 <- read.csv("teamstatsmap.csv")
-Teamstats2 <- read.csv("Teamstats2.csv")
-footballfield <- png::readPNG("footballfield.png")
-PassingStats <- read.csv("PassStats.csv")  
-
-
-
-Team <-  c("ARI", "NYJ", "OAK", "SF", "JAX", "NYG", "TB", "BUF", "CIN", "DEN", "DET", "GB", "ATL", "CAR", "CLE", "MIA", "WAS", "MIN", "PHI",
-           "PIT", "TEN", "BAL", "DAL", "IND", "SEA", "HOU", "NE", "CHI", "KC", "LAC", "LA", "NO")
-SeasonStats <- c("W", "L", "T", "AverageYards", "CompletionRate")
-ui <- fluidPage(
-  
-  titlePanel("NFL Passing"),
-  
-  mainPanel(
-    selectInput(inputId = "Team", label = "NFL Teams:", choices = Team), 
-    selectInput(inputId = "SeasonStats", label = "Choose a Season Statistic:", choices = SeasonStats),
-    tabsetPanel(
-    
-      tabPanel("Averages vs. New England Patriots", plotOutput("Plot2")
-      ),
-      tabPanel("Season Statistics By Team", DT::dataTableOutput("Table")
-      ),
-      tabPanel("Total Passing Yards vs. New England Patriots", plotOutput("Plot3")
-               ),
-      tabPanel("Passsing Statistics By Team", DT::dataTableOutput("Table2"))
-    )
-  )
-  
-)
-
-
-
-server <- function(input, output) {
-
-  use_data3 <- reactive({
-    data <- plot3 %>%
-      filter(Team == input$Team | Team == "NE")
-  })
-  use_data4 <- reactive({
-    data <- PassingStats %>%
-      filter(Team == input$Team | Team == "NE")
-  })
-  
- 
-  output$Plot2 <- renderPlot(
-    ggplot(data = use_data3(), aes_string(x = "Team", y = input$SeasonStats, fill = "Team")) + 
-             geom_bar(position = "dodge", stat = "identity")
-  )
-  output$Plot3 <- renderPlot(
-    ggplot(data = use_data4(), aes_string(x = "Team", y = "TotalYards", fill = "Team")) + 
-      geom_bar(position = "dodge", stat = "identity"),
-  )
-  output$Table2 <- DT::renderDataTable(
-    DT::datatable(PassingStats)
-  )
-  output$Table <- DT::renderDataTable(
-    DT::datatable(plot3)
-  )
- 
-}
-
-  
-
-
-
-
-
-
-shinyApp(ui = ui, server = server)
-
-
-
-
-```
-
-
-
-
-
-
+<iframe height="600" width="100%" frameborder="no" title="Put Your Title Here" src="https://username.shinyapps.io/shinyappname/"> </iframe>
 
 ## Field Statistics
 To explore the outcome of passing plays, we created an app where one can input down, yards to go (short, medium, long), absolute yard line, and direction of the play. By changing these inputs, one will be able to see the outcome of every which is displayed on a choropleth of a football field. Events of the game are marked with different symbols. Check it out!
 
-```{r, echo=FALSE, message = FALSE, warning=FALSE}
-plot1 <- read.csv("plot1finished.csv")
-plot2 <- read.csv("plot2finished.csv") 
-
-togo <- c("short", "medium", "long")
-direction1 <- c("left", "right")
-
-ui <- fluidPage(
-  
-  titlePanel("Play by Play Passing Stats"),
-  
-  sidebarPanel(
-    sliderInput(inputId = "down1", label = "Down",
-                min = 1, max = 4,
-                value = 1),
-    selectInput(inputId = "ToGo", label = "Yards To Go", choices = togo),
-    sliderInput(inputId = "yardline", label = "Absolute Yardline",
-                min = 0, max = 110,
-                value = 0),
-    selectInput(inputId = "direction", label = "Direction of Play", choices = direction1),
-    
-  ),
-  mainPanel(
- 
-      tabPanel("Plot of Passing Play Outcomes", plotOutput("Plot")
-      ),
-      tabPanel("Table of Passing Play Outcomes",  DT::dataTableOutput("Table_plot")
-      )
-)
-)
-
-
-
-server <- function(input, output) {
-  use_data <- reactive({
-    data <- plot1 %>%
-      filter(down == input$down1)%>%
-      filter(togo == input$ToGo) %>%
-      filter(absoluteYardlineNumber == input$yardline)%>%
-      filter(playDirection == input$direction)
-  })
-  
-  use_data2 <- reactive({
-    data <- plot2 %>%
-      filter(down == input$down1)%>%
-      filter(togo == input$ToGo) %>%
-      filter(absoluteYardlineNumber == input$yardline)%>%
-      filter(playDirection == input$direction)
-  })
-  output$Plot <- renderPlot(
-    ggplot(data = use_data(), aes_string(x = "x", y = "y", shape = "event", color = "event"))+
-      annotation_custom(rasterGrob(footballfield, 
-                                   width = unit(1,"npc"), 
-                                   height = unit(1,"npc")), 
-                        -Inf, Inf, -Inf, Inf) + 
-      geom_point(size = 5)+
-      xlim(0,120)+
-      ylim(-5,60)+
-      scale_color_manual(values=c('orange','yellow', 'red', 'blue'))+
-      scale_shape_manual(values=c(15, 16, 17, 18))+
-      labs(x = " ", y = " ")
-    
-  )
-  
-  
-  output$Table_plot <- DT::renderDataTable(
-    DT::datatable(use_data2())
-  )   
-}
-
-  
-
-
-
-
-
-
-shinyApp(ui = ui, server = server)
-
- 
-
-
-```
+<iframe height="600" width="100%" frameborder="no" title="Put Your Title Here" src="https://username.shinyapps.io/shinyappname/"> </iframe>
 
 
 
